--- a/react/react17-basic/package.json
+++ b/react/react17-basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.9",
@@ -26,6 +25,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
+    "react-scripts": "4.0.3",
     "typescript": "4.3.2"
   }
 }
