--- a/react/react16-basic/package.json
+++ b/react/react16-basic/package.json
@@ -7,6 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prod": "react-scripts build && serve -l 3000 -s build",
     "lint": "eslint --ignore-path .gitignore --ext js,jsx,ts,tsx ."
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "^2.1.2",
     "react-scripts": "3.4.3",
+    "serve": "^12.0.0",
     "typescript": "~3.7.2"
   }
 }
