--- a/react/react17-basic-props-children/package.json
+++ b/react/react17-basic-props-children/package.json
@@ -7,6 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prod": "react-scripts build && serve -l 3000 -s build",
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
     "react-scripts": "4.0.3",
+    "serve": "^12.0.0",
     "typescript": "4.3.2"
   }
 }
