--- a/vue/vue3-basic/package.json
+++ b/vue/vue3-basic/package.json
@@ -22,6 +22,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.11.1",
     "prettier": "^2.2.1",
