--- a/svelteKit/svelteKit1-basic/package.json
+++ b/svelteKit/svelteKit1-basic/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "scripts": {
     "dev": "svelte-kit dev",
+    "prod": "npm run build && npm run preview",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
     "lint": "prettier --check --plugin-search-dir=. --ignore-path .gitignore . && eslint --ignore-path .gitignore . && svelte-check"
   },
   "devDependencies": {
-    "@sveltejs/kit": "1.0.0-next.*",
+    "@sveltejs/kit": "^1.0.0-next.100",
     "@tsconfig/svelte": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
