--- a/puppeteer/launch/package.json
+++ b/puppeteer/launch/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
-    "start": "nodemon --watch 'app.test.ts' --exec 'ts-node' app.test.ts"
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "5.43.0",
@@ -20,12 +19,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "puppeteer": "^19.2.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "puppeteer": "^19.2.2"
   }
 }
