feat(grapesjs): edit Components/addComponent example

--- a/grapesjs/Components/addComponent/tsconfig.json
+++ b/grapesjs/Components/addComponent/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "noImplicitAny": false,
     "strict": true,
-    "target": "esnext",
+    "target": "ESNext",
   },
   "exclude": ["node_modules"]
 }
