--- a/grapesjs/Components/addComponent/package.json
+++ b/grapesjs/Components/addComponent/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack build",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
@@ -18,13 +20,19 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "find-process": "^1.4.7",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "node-sass": "^8.0.0",
     "prettier": "^2.7.1",
+    "puppeteer": "^19.2.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "tree-kill": "^1.2.2",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.8.3",
+    "typescript": "^4.8.4",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
   },
