--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "sandbox",
+  "name": "javascript",
   "private": true,
   "version": "1.0.0",
+  "scripts": {
+    "prepare": "husky"
+  },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1"
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2"
   }
 }
