--- a/tailwindcss/@layer/.gitignore
+++ b/tailwindcss/@layer/.gitignore
@@ -6,31 +6,15 @@
 .pnp.js
 .yarn/install-state.gz
 
+# build
+/dist
+
 # testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
+/test-results
 
 # misc
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
+Thumbs.db
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
