--- a/basic/window.getComputedStyle/package.json
+++ b/basic/window.getComputedStyle/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "vanilla",
+  "name": "basic-example",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve",
+    "dev": "webpack serve",
     "build": "webpack build",
-    "dev": "npm run start",
-    "prod": "npm run build && serve dist",
-    "lint": "prettier --write . && cd src && htmlhint index.html && eslint index.js && stylelint index.css"
+    "start": "http-server dist",
+    "prod": "npm run build && npm run start",
+    "lint": "eslint . && htmlhint && stylelint ./**/*.css",
+    "test": "playwright test",
+    "postinstall": "playwright install"
   },
   "devDependencies": {
-    "css-loader": "^5.2.7",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "html-webpack-plugin": "^5.3.2",
-    "htmlhint": "^0.15.1",
-    "mini-css-extract-plugin": "^2.1.0",
-    "prettier": "^2.3.2",
-    "serve": "^12.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "@playwright/test": "^1.45.3",
+    "css-loader": "^7.1.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "html-webpack-plugin": "^5.6.0",
+    "htmlhint": "^1.1.4",
+    "http-server": "^14.1.1",
+    "playwright": "^1.45.3",
+    "prettier": "^3.3.3",
+    "stylelint": "^16.7.0",
+    "stylelint-config-standard": "^36.0.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
